--- a/index.html
+++ b/index.html
@@ -3,27 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TP 2: Carta de Restaurant</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Página principal</title>
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <title>TP 2:Página principal</title>
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Nombre Restaurant</h1>
-    <section>
-        <h2>Minutas:</h2>
-    </section>
-    <section>
-        <h2>Entradas:</h2>
-    </section>
-    <section>
-        <h2>Carnes:</h2>
-    </section>
-    <section>
-        <h2>Pastas:</h2>
-    </section>
-    <section>
-        <h2>Ensaladas:</h2>
-    </section>
-    <section>
-        <h2>Postres:</h2>
-    </section>
+ <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+
+    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse1">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarCollapse1">
+      <div class="navbar-nav">
+       <a href="index.html" class="nav-item nav-link active">Página principal</a>
+       <a href="menú.html" class="nav-item nav-link">Menú</a>
+
+   </div>
+</div>
+<form class="form-inline ml-auto">
+  <input type="text" class="form-control mr-sm-2" placeholder="Search">
+  <button type="submit" class="btn btn-outline-light"><a>Search</a></button>
+</form>
+</nav>
+<div class="container">
+  <div class="row">
+    <div class="col">
+        
+    </div>
+
+</div>
+
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
+
 </html>
